2000-06-05  Yoshinari Nomura  <nom@quickhack.net>

	* mhc/emacs/mhc.el: check binding of 'gnus-version.

2000-06-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el (mhc-eword-encode-string): New function.
	(mhc-sch-scan1): Replace eword-encode-string with
	mhc-eword-encode-string.

2000-06-05  Yoshinari Nomura  <nom@quickhack.net>

	* 00readme: hide mhc-core.

	* emacs/mhc.el: Change version number (0.25).

	* emacs/00usage.jis, 00readme.jis: 
	Change ML address and Web addresses. (again)

2000-06-02  Yoshinari Nomura  <nom@quickhack.net>

	* 00readme, 00readme.jis, emacs/00usage.jis:
	Change ML address and Web address.

2000-05-29  Yoshinari Nomura  <nom@quickhack.net>

	* NEWS.jis, NEWS : info about 0.25.

	* 00todo.jis : add some memos.

2000-05-27  Yoshinari NOMURA  <nom@quickhack.net>

        * 00changes.jis: obsolete.

	* ChangeLog, NEWS: New file.

2000-05-26  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc.el: menu fix for xemacs. (thanks to shirai san)

2000-05-26  Yuuichi Teranishi <teranisi@gohome.org>

	* emacs/mhc.el (mhc-scan-month):
	Set `wl-summary-buffer-number-regexp' and
	`wl-summary-buffer-msgdb'.

2000-05-25  Yoshinari NOMURA  <nom@quickhack.net>

	* ruby-ext/lib/mhc-schedule.rb: make sure put last \n.

	* mhc-sync: strict check not to access deleted schedule.
	fix typo.

	* emacs/mhc.el: mhc-version changed to "0.25pre3"

	* Newly restart.