@@ -1,6 +1,11 @@
+2000-06-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
+
+	* emacs/mhc.el: Fix of scheme, which defines
+	mhc-eword-encode-string.
+
 2000-06-05  Yoshinari Nomura  <nom@quickhack.net>
 
-	* mhc/emacs/mhc.el: check binding of 'gnus-version.
+	* emacs/mhc.el: check binding of 'gnus-version.
 
 2000-06-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
